@@ -2,6 +2,12 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*xmwde-0_p20131206 (06 Dec 2013)
+
+  06 Dec 2013; Michael Weber <xmw@gentoo.org> +xmwde-0_p20131206.ebuild,
+  metadata.xml:
+  mate support
+
 *xmwde-0_p20120919-r1 (25 Mar 2013)
 
   25 Mar 2013; Michael Weber <xmw@gentoo.org> +xmwde-0_p20120919-r1.ebuild:
